kubernetes/platform/argocd/polarbook-common/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-bookshop-ingress
spec:
  rules:
   - http:
      paths:
        - path: /polarbook/dev
          pathType: Prefix
          backend:
            service:
              name: edge-service-stable.polarbook-development.svc.cluster.local
              port:
                number: 80
        - path: /polarbook/
          pathType: Prefix
          backend:
            service:
              name: edge-service-stable.polarbook-production.svc.cluster.local
              port:
                number: 80
